bootcamp-monorepo-nodejs-main/bulletinboard-ads-nodejs/.k8s/2_bulletinboard-ads-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bulletinboard-ads-db
spec:
  selector:
    matchLabels:
      app: bulletinboard-ads-db
  replicas: 1
  template:
    metadata:
      labels:
        app: bulletinboard-ads-db
    spec:
      volumes:
        - name: bulletinboard-ads-db-vol
          persistentVolumeClaim:
            claimName: bulletinboard-ads-db-pvc
      containers:
        - name: postgres
          image: postgres:12-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: bulletinboard-ads-db-vol
              mountPath: /var/lib/postgresql/data
---
apiVersion: v1
kind: Service
metadata:
  name: bulletinboard-ads-db
spec:
  selector:
    app: bulletinboard-ads-db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
