bootcamp-monorepo-nodejs-main/bulletinboard-ads-nodejs/.k8s/3_bulletinboard-ads.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bulletinboard-ads
spec:
  selector:
    matchLabels:
      app: bulletinboard-ads
  replicas: 1
  template:
    metadata:
      labels:
        app: bulletinboard-ads
    spec:
      imagePullSecrets:
        - name: docker-registry
      containers:
        - name: app
          image: cc-ms-k8s-training.common.repositories.cloud.sap/bootcamp-ads-i550531:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthK8s
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: bulletinboard-ads
spec:
  selector:
    app: bulletinboard-ads
  ports:
    - name: app
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert.gardener.cloud/purpose: managed
  name: bulletinboard-ads
spec:
  rules:
    - host: ads.ingress.sdk.i550531bc.shoot.canary.k8s-hana.ondemand.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bulletinboard-ads
                port:
                  number: 8080
  tls:
    - hosts:
        - ads.ingress.sdk.i550531bc.shoot.canary.k8s-hana.ondemand.com
      secretName: ads-cert
